# vibPerformance

./: CMakeLists.txt  README.md
model/: CMakeLists.txt
model/include/: filesystemcustommodel.h
model/src/: filesystemcustommodel.cpp
resources/: resources.qrc
sgy/: CMakeLists.txt
sgy/include/: data.h  spectrumcalcservice.h
sgy/src/: data.cpp  spectrumcalcservice.cpp
share/: CMakeLists.txt
share/include/: util.h  xcorr.h
share/src/: util.cpp  xcorr.cpp
tests/: CMakeLists.txt
tests/sgytest/: CMakeLists.txt  tst_open_sgy_data.cpp  tst_spectrumcalcservice.cpp
tests/sgytest/testdata/: fake.segy
tests/uitest/: CMakeLists.txt  tst_open_sgy_ui.cpp
ui/: CMakeLists.txt
ui test/: gedit-test-utf8-procedural-api.py
ui/forms/: crosscor.ui  mainwindow.ui  plotarea.ui  sgyfileselection.ui  spectrumcalc.ui
ui/include/: crosscor.h  mainwindow.h  plotarea.h  sgyfileselection.h  spectrumcalc.h
ui/src/: crosscor.cpp  mainwindow.cpp  plotarea.cpp  sgyfileselection.cpp  spectrumcalc.cpp
